--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
             <a href="#catalysts"><button>Saiba Mais</button></a>
         </div>
         <div class="banner_icons">
-            <a href="https://www.instagram.com/golden.catalisadorsp/" target="_blank"><img src="./images/icons/iconInsta.png" alt="Instagram"></a>
-            <a href="https://www.facebook.com/profile.php?id=100083412666917" target="_blank"><img src="./images/icons/iconFace.png" alt="Facebook"></a>
+            <a href="https://www.instagram.com/golden.catalisadorsp/" target="_blank"><img src="./images/icons/IconInsta.png" alt="Instagram"></a>
+            <a href="https://www.facebook.com/profile.php?id=100083412666917" target="_blank"><img src="./images/icons/IconFace.png" alt="Facebook"></a>
         </div>
     </section>
 
@@ -188,8 +188,8 @@
                 <h4 data-anime="bottom">Redes Sociais</h4>
                 <p data-anime="bottom">Siga nossas redes sociais</p>
                 <div class="contact_icons">
-                    <a href="https://www.facebook.com/profile.php?id=100083412666917" target="_blank"><img src="./images/icons/iconFace.png" alt="Facebook" data-anime="bottom"></a>
-                    <a href="https://www.instagram.com/golden.catalisadorsp/" target="_blank"><img src="./images/icons/iconInsta.png" alt="Instagram" data-anime="bottom"></a>
+                    <a href="https://www.facebook.com/profile.php?id=100083412666917" target="_blank"><img src="./images/icons/IconFace.png" alt="Facebook" data-anime="bottom"></a>
+                    <a href="https://www.instagram.com/golden.catalisadorsp/" target="_blank"><img src="./images/icons/IconInsta.png" alt="Instagram" data-anime="bottom"></a>
                 </div>
             </div>
         </div>
