add favicon in other pages

--- a/pages/catalysts.html
+++ b/pages/catalysts.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GC-Catalisadores</title>
+    <title>GC-Mais Catalisadores</title>
+    <link rel="icon" href="../images/favicon.ico" type="image/png" sizes="100x100">
     <link rel="stylesheet" href="/css/catalysts.css">
 </head>
 <body>
