--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                 <img src="./images/icons/IconEmailFoot.png" alt="" data-anime="bottom">
                 <h4 data-anime="bottom">E-mail</h4>
                 <p data-anime="bottom">Mande uma mensagem se tiver alguma dúvida</p>
-                <h5 data-anime="bottom">@E-mail.com</h5>
+                <h5 data-anime="bottom"><a href="mailto:golden.catalisadorsp@gmail.com">golden.catalisadorsp@gmail.com</a></h5>
             </div>
             <div class="contact">
                 <img src="./images/icons/IconSocialFoot.png" alt="" data-anime="bottom">
