add more catalysts 10

--- a/pages/catalysts.html
+++ b/pages/catalysts.html
@@ -35,6 +35,7 @@
         </div>
     </header>
     <section class="catalysts_container" id="products-container"></section>
+    <div class="pagination" id="pagination"></div>  
 
     <script src="../js/script.js"></script>
 </body>
