--- a/pages/product_page_template.html
+++ b/pages/product_page_template.html
@@ -20,8 +20,10 @@
         <div class="product-details-2">
             <h1>Catalisador</h1>
             <h2 id="productTitle"></h2>
+            <h3>Instalação Grátis</h3>
+            <h4 id="productPrice"></h4>
+            <h5>(Base de Troca)</h5>
             <p id="productDescription"></p>
-            <h3 id="productPrice"></h3>
             <a id="whatsappLink" href="" target="_blank">Faça seu Pedido <img src="../images/icons/IconBuy.png" alt=""></a>
         </div>
     </section>
