add more catalysts 30

--- a/pages/catalysts.html
+++ b/pages/catalysts.html
@@ -30,6 +30,7 @@
                 <option value="Chrysler">Chrysler</option>
                 <option value="Hyundai">Hyundai</option>
                 <option value="Kia">Kia</option>
+                <option value="Lifan">Lifan</option>
             </select>
             <input type="search" id="searchFilter" placeholder="Pesquise" onkeyup="filterCards()">        
         </div>
