add more catalysts 15

--- a/pages/catalysts.html
+++ b/pages/catalysts.html
@@ -31,6 +31,9 @@
                 <option value="Hyundai">Hyundai</option>
                 <option value="Kia">Kia</option>
                 <option value="Lifan">Lifan</option>
+                <option value="Dodge">Dodge</option>
+                <option value="MINI">MINI</option>
+                <option value="Suzuki">Suzuki</option>
             </select>
             <input type="search" id="searchFilter" placeholder="Pesquise" onkeyup="filterCards()">        
         </div>
