add more catalysts 30

--- a/pages/product_page_template.html
+++ b/pages/product_page_template.html
@@ -22,7 +22,7 @@
             <h2 id="productTitle"></h2>
             <h3>Instalação Grátis</h3>
             <h4 id="productPrice"></h4>
-            <h5>(Base de Troca)</h5>
+            <h5>(Peça a Base de Troca)</h5>
             <p id="productDescription"></p>
             <a id="whatsappLink" href="" target="_blank">Faça seu Pedido <img src="../images/icons/IconBuy.png" alt=""></a>
         </div>
