--- a/pages/catalysts.html
+++ b/pages/catalysts.html
@@ -34,6 +34,7 @@
                 <option value="Dodge">Dodge</option>
                 <option value="MINI">MINI</option>
                 <option value="Suzuki">Suzuki</option>
+                <option value="Citroen">Citroen</option>
             </select>
             <input type="search" id="searchFilter" placeholder="Pesquise" onkeyup="filterCards()">        
         </div>
