add more catalysts 60

--- a/pages/catalysts.html
+++ b/pages/catalysts.html
@@ -35,6 +35,7 @@
                 <option value="MINI">MINI</option>
                 <option value="Suzuki">Suzuki</option>
                 <option value="Citroen">Citroen</option>
+                <option value="Universal">Universal</option>
             </select>
             <input type="search" id="searchFilter" placeholder="Pesquise" onkeyup="filterCards()">        
         </div>
