add more catalysts final

--- a/pages/catalysts.html
+++ b/pages/catalysts.html
@@ -36,6 +36,7 @@
                 <option value="Suzuki">Suzuki</option>
                 <option value="Citroen">Citroen</option>
                 <option value="Universal">Universal</option>
+                <option value="Audi">Audi</option>
             </select>
             <input type="search" id="searchFilter" placeholder="Pesquise" onkeyup="filterCards()">        
         </div>
