add icon mercado livre

--- a/pages/product_page_template.html
+++ b/pages/product_page_template.html
@@ -25,6 +25,9 @@
             <h5>(Peça a Base de Troca)</h5>
             <p id="productDescription"></p>
             <a id="whatsappLink" href="" target="_blank">Faça seu Pedido <img src="../images/icons/IconBuy.png" alt=""></a>
+            <div class="icon_mercado">
+                <h6>Entregamos para todo Brasil</h6><img src="../images/icons/IconMercadoLivre.png" alt="" style="width: 40px; height: 40px;">
+            </div>
         </div>
     </section>
 
