add more catalysts

--- a/pages/catalysts.html
+++ b/pages/catalysts.html
@@ -14,7 +14,7 @@
         </div>
         <div class="more_search">
             <select id="brandFilter" onchange="filterCards()">
-                <option value="">Marca</option>
+                <option value="">Linhas</option>
                 <option value="BMW">BMW</option>
                 <option value="Honda">Honda</option>
                 <option value="Toyota">Toyota</option>
@@ -37,6 +37,7 @@
                 <option value="Citroen">Citroen</option>
                 <option value="Universal">Universal</option>
                 <option value="Audi">Audi</option>
+                <option value="Diesel">Diesel</option>
             </select>
             <input type="search" id="searchFilter" placeholder="Pesquise" onkeyup="filterCards()">        
         </div>
