--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <!-- Meta Tags Generated with https://metatags.io -->
 </head>
 <body>
+<!--
     <header>
         <nav class="navigation">
             <ul class="nav-menu">
@@ -43,8 +44,10 @@
             </div>
         </nav>
     </header>
-
+-->
     <section class="banner_container">
+        <h1>Erro 404</h1>
+        <!--
         <div class="banner_text">
             <img src="./images/GC-Logo.png" alt="GC-Logo">
             <a href="#catalysts"><button>Saiba Mais</button></a>
@@ -53,8 +56,9 @@
             <a href="https://www.instagram.com/golden.catalisadorsp/" target="_blank"><img src="./images/icons/IconInsta.png" alt="Instagram"></a>
             <a href="https://www.facebook.com/profile.php?id=100083412666917" target="_blank"><img src="./images/icons/IconFace.png" alt="Facebook"></a>
         </div>
+        -->
     </section>
-
+<!--
     <section class="catalysts_container_index" id="catalysts">
         <div class="catalysts_text">
             <h2 data-anime="bottom">Catalisadores</h2>
@@ -202,5 +206,6 @@
     </div>
 
     <script src="./js/script.js"></script>
+-->
 </body>
 </html>
