--- a/index.html
+++ b/index.html
@@ -26,179 +26,7 @@
 
     <!-- Meta Tags Generated with https://metatags.io -->
 </head>
-<body>
-    <header>
-        <nav class="navigation">
-            <ul class="nav-menu">
-                <li><a href="/" class="nav-item active">Home</a></li>
-                <li><a href="#catalysts" class="nav-item">Catalisadores</a></li>
-                <li><a href="#about" class="nav-item">Sobre</a></li>
-                <li><a href="#services" class="nav-item">Serviços</a></li>
-                <li><a href="#contact" class="nav-item">Contato</a></li>
-            </ul>
-            <div class="menu">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-            </div>
-        </nav>
-    </header>
-    <section class="banner_container">
-        <div class="banner_text">
-            <img src="./images/GC-Logo.png" alt="GC-Logo">
-            <a href="#catalysts"><button>Saiba Mais</button></a>
-        </div>
-        <div class="banner_icons">
-            <a href="https://www.instagram.com/golden.catalisadorsp/" target="_blank"><img src="./images/icons/IconInsta.png" alt="Instagram"></a>
-            <a href="https://www.facebook.com/profile.php?id=100083412666917" target="_blank"><img src="./images/icons/IconFace.png" alt="Facebook"></a>
-        </div>
-    </section>
-    <section class="catalysts_container_index" id="catalysts">
-        <div class="catalysts_text">
-            <h2 data-anime="bottom">Catalisadores</h2>
-            <h3 data-anime="bottom">Transformando Emissões em Sustentabilidade</h3>
-            <div class="line_text" data-anime="bottom"></div>
-        </div>
-        <div class="catalysts_cards">
-            <div class="catalysts_card" data-anime="bottom">
-                <img src="./images/catalysts/catalystBMW.png" alt="Catalyst">
-                <h4>BMW X1 118i 120i 320i 2.0 16v Original</h4>
-                <p>(Recondicionado)</p>
-                <a href="./pages/product_page_template.html?brand=BMW&imgSrc=..%2Fimages%2Fcatalysts%2FcatalystBMW.png&title=BMW%20X1%20118i%20120i%20320i%202.0%2016v%20Original&description=(Recondicionado)&whatsappLink=https%3A%2F%2Fapi.whatsapp.com%2Fsend%2F%3Fphone%3D5511911054332%26text%3DEstou%2520interessado%2520no%2520BMW%2520X1%2520118i%2520120i%2520320i%25202.0%252016v%2520Original%2520(Recondicionado)%26type%3Dphone_number%26app_absent%3D0&price=R%24%202.300%2C00">Saiba Mais</a>
-            </div>
-            <div class="catalysts_card" data-anime="bottom"> 
-                <img src="./images/catalysts/catalystNewCivic.png" alt="Catalyst">
-                <h4>Catalisador New Civic Original</h4>
-                <p>(Recondicionado)</p>
-                <a href="./pages/product_page_template.html?brand=Honda&imgSrc=..%2Fimages%2Fcatalysts%2FcatalystNewCivic.png&title=Catalisador%20New%20Civic%20Original&description=(Recondicionado)&whatsappLink=https%3A%2F%2Fwa.me%2F5511911054332%3Ftext%3DEstou%2520interessado%2520no%2520Catalisador%2520New%2520Civic%2520Original%2520(Recondicionado)&price=R%24%201.380%2C00">Saiba Mais</a>
-            </div>
-            <div class="catalysts_card" data-anime="bottom">
-                <img src="./images/catalysts/catalystCorolla.png" alt="Catalyst">
-                <h4>Catalisador Toyota Corolla Original</h4>
-                <p>(Recondicionado)</p>
-                <a href="./pages/product_page_template.html?brand=Toyota&imgSrc=..%2Fimages%2Fcatalysts%2FcatalystCorolla.png&title=Catalisador%20Toyota%20Corolla%20Original&description=(Recondicionado)&whatsappLink=https%3A%2F%2Fwa.me%2F5511911054332%3Ftext%3DEstou%2520interessado%2520no%2520Catalisador%2520Toyota%2520Corolla%2520Original%2520(Recondicionado)&price=R%24%201.300%2C00">Saiba Mais</a>
-            </div>
-            <div class="catalysts_card" data-anime="bottom">
-                <img src="./images/catalysts/catalystToro.png" alt="Catalyst">
-                <h4>Toro/Renegade/Compass Original</h4>
-                <p>(Recondicionado)</p>
-                <a href="./pages/product_page_template.html?brand=Fiat&imgSrc=..%2Fimages%2Fcatalysts%2FcatalystToro.png&title=Toro%2FRenegade%2FCompass%20Original&description=(Recondicionado)&whatsappLink=https%3A%2F%2Fwa.me%2F5511911054332%3Ftext%3DEstou%2520interessado%2520no%2520Toro%2FRenegade%2FCompass%2520Original%2520(Recondicionado)&price=R%24%201.480%2C00">Saiba Mais</a>
-            </div>
-        </div>
-        <div class="catalyst_more">
-            <a href="./pages/catalysts.html" class="catalyst_more_btn" data-anime="bottom">Mais Produtos</a>
-        </div>
-    </section>
-
-    <section class="about_container" id="about">
-        <div class="about_text">
-            <h2 data-anime="bottom">Sobre Nós</h2>
-            <h3 data-anime="bottom">Pioneiros em Soluções de Emissões Veiculares</h3>
-            <div class="line_text" data-anime="bottom"></div>
-        </div>
-        <div class="about_1">
-            <div class="about_1_image">
-                <img src="./images/GC-Logo.png" alt="" data-anime="bottom">
-            </div>
-            <div class="about_1_line" data-anime="bottom"></div> 
-            <div class="about_1_text">
-                <h3 data-anime="bottom">Sobre a <span class="gold">Golden</span></h3>
-                <p data-anime="bottom">Bem-vindo à <span class="goldItalic">Golden Catalisadores</span>, líder em catalisadores automotivos. Nosso compromisso com a inovação e a sustentabilidade nos impulsiona a desenvolver soluções de alta qualidade para reduzir emissões veiculares. Com uma equipe especializada, oferecemos produtos de ponta que excedem padrões regulatórios e promovem um futuro mais limpo. Junte-se a nós nessa jornada por um ambiente mais saudável e eficiente.</p>
-                <a href="#more" data-anime="bottom">Mais Sobre</a>
-            </div>
-        </div>
-        <div id="more"></div>
-        <div class="about_2">
-            <div class="about_2_text">
-                <h3 data-anime="bottom">Nossos <span class="gold">Valores</span></h3>
-                <div class="about_2_line" data-anime="bottom"></div> 
-                <p data-anime="bottom">Na <span class="goldItalic">Golden Catalisadores</span>, somos impulsionados pela inovação e comprometidos com a qualidade, produzindo catalisadores automotivos que excedem padrões regulatórios. Priorizamos a sustentabilidade em todas as etapas de produção e nos comprometemos com a satisfação do cliente, agindo com integridade e contribuindo positivamente para as comunidades. Buscamos a excelência em todas as áreas da empresa, mantendo-nos fiéis aos nossos valores <br>fundamentais.</p>
-                <a href="#services" data-anime="bottom">Serviços</a>
-            </div>
-        </div>
-    </section>
-
-    <section class="services_container" id="services">
-        <div class="services_text">
-            <h2 data-anime="bottom">Serviços</h2>
-            <h3 data-anime="bottom">Impulsionando Um Futuro Sustentável</h3>
-            <div class="line_text" data-anime="bottom"></div>
-        </div>
-        <div class="services_cards">
-            <div class="services_card" data-anime="bottom">
-                <img src="./images/icons/IconBuy.png" alt="Icon Buy">
-                <h4>Compra</h4>
-                <p>A empresa oferece serviços de compra de catalisadores automotivos usados ​​para reciclagem ou recondicionamento.</p>
-            </div>
-            <div class="services_card" data-anime="bottom">
-                <img src="./images/icons/IconSale.png" alt="Icon Sale">
-                <h4>Venda</h4>
-                <p>Venda de catalisadores automotivos novos e recondicionados para clientes que buscam substituir ou atualizar seus catalisadores.</p>
-            </div>
-            <div class="services_card" data-anime="bottom">
-                <img src="./images/icons/IconRestart.png" alt="Icon Restart">
-                <h4>Recondicionamento</h4>
-                <p>Serviços de recondicionamento de catalisadores automotivos usados, visando restaurar sua eficácia e prolongar sua vida útil.</p>
-            </div>
-            <div class="services_card" data-anime="bottom">
-                <img src="./images/icons/IconRecycling.png" alt="Icon Recycling">
-                <h4>Reciclagem</h4>
-                <p>Programas de reciclagem para catalisadores automotivos usados, garantindo uma disposição responsável e ambientalmente consciente de materiais.</p>
-            </div>
-        </div>
-        <div class="dropdown_service">
-            <details data-anime="bottom">
-                <summary>Inspeção e Diagnóstico de Catalisadores</summary>
-                <p>Nossa equipe especializada oferece serviços abrangentes de inspeção e diagnóstico de catalisadores automotivos. Identificamos problemas e recomendamos soluções para garantir o desempenho ideal do seu veículo.</p>
-            </details>
-            <details data-anime="bottom">
-                <summary>Manutenção Preventiva de Catalisadores</summary>
-                <p>Mantenha seus catalisadores automotivos funcionando sem problemas com nossos serviços de manutenção preventiva. Evite falhas e prolongue a vida útil do seu sistema de exaustão.</p>
-            </details>
-            <details data-anime="bottom">
-                <summary>Serviços de Reciclagem Responsável</summary>
-                <p>Contribua para um futuro mais sustentável com nossos serviços de reciclagem responsável de catalisadores automotivos usados. Ajude a preservar o meio ambiente enquanto recebe uma compensação justa.</p>
-            </details>
-        </div>
-    </section>
-
-    <footer class="contact_container" id="contact">
-        <div class="contact_text">
-            <h2 data-anime="bottom">Contato</h2>
-            <h3 data-anime="bottom">Converse Conosco para um Futuro Mais Limpo</h3>
-            <div class="line_text" data-anime="bottom"></div>
-        </div>
-        <div class="contact_content">
-            <div class="contact">
-                <img src="./images/icons/IconWhatsFoot.png" alt="" data-anime="bottom">
-                <h4 data-anime="bottom">Whatsapp</h4>
-                <p data-anime="bottom">Você pode entrar em contato a qualquer hora</p>
-                <h5 data-anime="bottom">+55 11 91105-4332</h5>
-            </div>
-            <div class="contact">
-                <img src="./images/icons/IconEmailFoot.png" alt="" data-anime="bottom">
-                <h4 data-anime="bottom">E-mail</h4>
-                <p data-anime="bottom">Mande uma mensagem se tiver alguma dúvida</p>
-                <h5 data-anime="bottom"><a href="mailto:golden.catalisadorsp@gmail.com">golden.catalisadorsp@gmail.com</a></h5>
-            </div>
-            <div class="contact">
-                <img src="./images/icons/IconSocialFoot.png" alt="" data-anime="bottom">
-                <h4 data-anime="bottom">Redes Sociais</h4>
-                <p data-anime="bottom">Siga nossas redes sociais</p>
-                <div class="contact_icons">
-                    <a href="https://www.facebook.com/profile.php?id=100083412666917" target="_blank"><img src="./images/icons/IconFace.png" alt="Facebook" data-anime="bottom"></a>
-                    <a href="https://www.instagram.com/golden.catalisadorsp/" target="_blank"><img src="./images/icons/IconInsta.png" alt="Instagram" data-anime="bottom"></a>
-                </div>
-            </div>
-        </div>
-    </footer>
-
-    <div class="whats">
-        <a href="https://wa.me/5511911054332?text=Olá,%20Golden%20Catalisadores%20SP" target="_blank">
-            <img src="./images/WhatsappFixed.png" alt="Fale Conosco pelo Whatsapp" title="Fale Conosco pelo Whatsapp">
-        </a>
-    </div>
-
-    <script src="./js/script.js"></script>
+<body style="display: flex; align-items: center;justify-content: center;color: white;height: 100vh;">
+    <h1 >ERRO 404</h1>
 </body>
 </html>
