--- a/pages/catalysts.html
+++ b/pages/catalysts.html
@@ -7,45 +7,7 @@
     <link rel="icon" href="../images/favicon.ico" type="image/png" sizes="100x100">
     <link rel="stylesheet" href="/css/catalysts.css">
 </head>
-<body>
-    
-    <header>
-        <div class="iconBack">
-           <a href="../index.html"><img src="/images/icons/IconBack.png" alt=""></a>
-        </div>
-        <div class="more_search">
-            <select id="brandFilter" onchange="filterCards()">
-                <option value="">Linhas</option>
-                <option value="BMW">BMW</option>
-                <option value="Honda">Honda</option>
-                <option value="Toyota">Toyota</option>
-                <option value="Fiat">Fiat</option>
-                <option value="Mitsubishi">Mitsubishi</option>
-                <option value="Renault">Renault</option>
-                <option value="Volkswagen">Volkswagen</option>
-                <option value="Caoa Chery">Caoa Chery</option>
-                <option value="Chevrolet">Chevrolet</option>
-                <option value="Nissan">Nissan</option>
-                <option value="Land Rover">Land Rover</option>
-                <option value="Ford">Ford</option>
-                <option value="Chrysler">Chrysler</option>
-                <option value="Hyundai">Hyundai</option>
-                <option value="Kia">Kia</option>
-                <option value="Lifan">Lifan</option>
-                <option value="Dodge">Dodge</option>
-                <option value="MINI">MINI</option>
-                <option value="Suzuki">Suzuki</option>
-                <option value="Citroen">Citroen</option>
-                <option value="Universal">Universal</option>
-                <option value="Audi">Audi</option>
-                <option value="Diesel">Diesel</option>
-            </select>
-            <input type="search" id="searchFilter" placeholder="Pesquise" onkeyup="filterCards()">        
-        </div>
-    </header>
-    <section class="catalysts_container" id="products-container"></section>
-    <div class="pagination" id="pagination"></div>  
-
-    <script src="../js/script.js"></script>
+<body style="display: flex; align-items: center;justify-content: center;color: white;height: 100vh;">
+    <h1 >ERRO 404</h1>
 </body>
 </html>
